# CHARMing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile.centos7  Dockerfile.centos8  Dockerfile.centos8-minimal  Dockerfile.ubuntu-18.04.charming  Dockerfile.ubuntu-20.04.charming  Dockerfile.ubuntu18  Dockerfile.ubuntu20  Dockerfile.ubuntu20-minimal  ENTANGLE_FILES  InstallToolChainWindows.html  InstallToolchainLinux.html  InstallToolchainRaspian.html  InstallToolchainUbuntu14.html  InstallToolchainUbuntu20.html  README.BUILD  README.md  VSWorkspaceSettings.json  buildboost.bat  buildboost.sh  buildpackages.sh  docker-build-charming.sh  docker-run-charming.sh  dockerbuild.sh  dockerrun.sh  get_charm.sh  init.cmake  initboost.bat  initboost.cmake  initboost.sh  initrepository.bat  initrepository.sh  libuv.sln  libuv.vcxproj  libuv.vcxproj.filters  minimalDockerfile.centos7  minimalDockerfile.centos8  (+5 more)
Mesytec-emulator/: CMakeLists.txt  CMakeSettings.json  Mesytec.RandomData.hpp  PackageSender.vcxproj.filters  PacketSender.cpp  cmake_variables.h.in  snapinstall.sh
NumpyCpp/: CMakeLists.txt  CMakeSettings.json  NumpyCpp.cpp  NumpyCpp.sln  NumpyCpp.vcxproj  NumpyCpp.vcxproj.filters  charm.py  test.py
NumpyCpp/entangle/example/: charm.res
PacketSender/: 8x8_horizontal_LSB_1.h  CMakeLists.txt  CMakeSettings.json  Mesytec.RandomData.hpp  PackageSender.sln  PacketSender.Params.hpp  PacketSender.cpp  rfc1071_checksum.hpp
TestBinning/: CMakeLists.txt  CMakeSettings.json  TestBinning.cpp  TestBinning.sln  TestBinning.vcxproj  TestBinning.vcxproj.filters
asio-extensions/: .gitignore
charm/: .gitignore  CMakeLists.txt  CMakeSettings.json  Charm.System.cpp  Charm.System.hpp  Charm.hpp  Charm.sln  Charm.vcxproj  Charm.vcxproj.filters  CounterMonitor.hpp  CustomOptionDescription.cpp  Entangle.Logger.cpp  Entangle.Logger.hpp  Mcpd8.CmdPacket.cpp  Mcpd8.CmdPacket.hpp  Mcpd8.DataPacket.hpp  Mcpd8.Parameters.cpp  Mcpd8.Parameters.hpp  Mcpd8.enums.hpp  Mesyec.Mpsd8.cpp  Mesytec.DeviceParameter.hpp  Mesytec.Mcpd8.cpp  Mesytec.Mcpd8.hpp  Mesytec.Mpsd8.hpp  Mesytec.config.cpp  Mesytec.config.hpp  Mesytec.enums.Generator.hpp  Mesytec.hpp  Mesytec.listmode.cpp  Mesytec.listmode.hpp  Mesytec.listmode.write.cpp  Mesytec.listmode.write.hpp  MesytecSystem.Data.cpp  MesytecSystem.Data.hpp  README.md  Zweistein.Averaging.hpp  Zweistein.Binning.ApplyOcc.hpp  Zweistein.Binning.hpp  Zweistein.Data.hpp  Zweistein.Event.hpp  (+44 more)
charm-entangle-install/: CMakeLists.txt  CMakeRC.cmake  CMakeSettings.json  Entangle_Install.cpp  Entangle_Install.h  bash.sudo.sh  charm.py  charming_build.sh  charming_install.sh  core.py  getboost.sh  getcmake.sh  getcompiler.sh  getgit.sh  getopencv.sh  getrepository.sh  gitversion.cpp.sh  mesytec-replay.py  remrepository.sh  settings.py  simulator.py  sitelibdir.py  snap.centos7.sh  snap.centos8.sh  syspath.py  test.py
charm-mesytec-emulator/: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile.win10  Mesytec.RandomData.hpp  PacketSender.Params.hpp  PacketSender.cpp  README.md  ftpout.sh  glibc2.27_compat2.2.5.cpp
charm-mesytec-emulator/snap/: snapcraft.yaml
charm/PacketSender/: .gitignore  16x12_horizontal_LSB_1.h  8x14_horizontal_LSB_1.h  CMakeLists.txt  CMakeSettings.json  Mesytec.RandomData.hpp  PackageSender.vcxproj  PacketSender.cpp
charm/PacketSender/asio-rawsockets/: ipv4_header.hpp
charm/opencv2/contrib/: contrib.hpp
charm/snap/: snapcraft.yaml
ci/: Dockerfile.centos7  Dockerfile.centos8  Dockerfile.debian10  Dockerfile.debian11  Dockerfile.ubuntu18  Dockerfile.ubuntu20  readme.vstudio  rtDockerfile.centos7  rtDockerfile.centos8  rtDockerfile.debian10  (+8 more)
entangle-charm-mesytec/: CMakeLists.txt  DebugHelper.cpp  Module.Globals.hpp  Module.Include.hpp  Module.NeutronMeasurement.hpp  Module.legacy_api_guard.hpp  PyCharm.sln  Settings.py  Simulator.py  charm-replay.py  charm.py  charming-core.py  charmsystem.cpp  core.py  listmodereplay.cpp  mesytec-replay.py  mesytec.py  mesytecsystem.cpp  mesytecsystem.sln  mesytecsystem.vcxproj  mesytecsystem.vcxproj.filters  msmtsystem.py  privileged.sh  test.py
entangle-charm-mesytec/entangle/: CMakeLists.txt
entangle-charm-mesytec/entangle/example/: CMakeLists.txt  charm-ID-SANS1.res.in  charm-ID-replay.res.in  charm-taco24-SANS1.res  charm-taco24-replay.res
entangle-charming/: CMakeLists.txt  CMakeSettings.json  DebugHelper.cpp  ENTANGLE_FILES  Module.Globals.hpp  Module.Include.hpp  Module.NeutronMeasurement.hpp  Module.startMonitor.hpp  charm.py  charmsystem.cpp  core.py  entangle-charming-test.pyproj  listmodereplay.cpp  mesytec-replay.py  mesytec.py  mesytecsystem.cpp  msmtsystem.py  privileged.sh  pylintrc  roimanager.py  settings.py  simulator.py  test-replay.py  test.py
entangle-charming/entangle/: CMakeLists.txt
entangle-charming/entangle/example/: CMakeLists.txt  ERWIN-detector-ID.res.in  ERWIN-detector-small-ID.res.in  ERWIN-detector-small.res  ERWIN-detector.res  SANS1-det-ID.res.in  SANS1_detector.res  SANS1_detector_ID.res.in  charm-ID-replay.res.in  charm-SANS1.res  listmode_ID_replay.res.in  listmode_replay.res  mesytec-listmode-replay.res
entangle-install-charming/: .gitignore  CMakeLists.txt  Entangle_Install.hpp  Zweistein.HomePath.hpp  entangle-install-charming.cpp
entangle-install-isegCC2x/: CC2x.py  CC2xTest.py  CMakeLists.txt  README.md  entangle-Install-isegCC2x.cpp
entangle-install-isegCC2x/CC2xlib/: 172_25_25_56_icsConfig.xml  globals.py
nicos-install-erwin_charming/: .gitignore  CMakeLists.txt  CMakeSettings.json  Nicos_Install.hpp  nicos-install-erwin_charming.cpp
nicos-install-sans1_charming/: CMakeLists.txt  CMakeSettings.json  Nicos_Install.hpp  nicos-install-sans1_charming.cpp
python-mesytecsystem/: .gitignore  CMakeLists.txt  CMakeSettings.json  PyCharm.pyproj  charm-SANS1.py  charm-replay.py  charm.py  listmodereplay.cpp  mesytecsystem.cpp  test-replay.py  test.py
python-mesytecsystem/entangle/: .gitignore
python-mesytecsystem/entangle/example/: CMakeLists.txt  charm-ID-SANS1.res.in  charm-SANS1.res  charm.res  install_manifest.txt
(+15 files in other folders)
